tests/disabled-cases/typecheck/functions/non-rt-arg.hash
// run=fail

// using types in argument position
bong := (x: Type) -> i32 => {
  3
}
